# uPip

./: .gitignore  Changelog.md  LICENSE  README.md  pyproject.toml
src/uPip/: cli.py  uPip.py
src/universalPip/: cli.py
