[project]
name = "uPip"
version = "0.1.0"
description = "Creates an Universal2 distribution for given package on PyPI and installs it."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Maxime CORDELLA", email = "maxime.cordella.1@ulaval.ca" }
]
keywords = [
  "Universal2",
  "macOSX",
  "pyinstaller",
  "arm64",
  "x66_64"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "requests",
  "regex",
  "delocate",
  "asyncio"
]

[project.scripts]
upip = "uPip.cli:processInput"

[project.urls]
Homepage = "https://github.com/MaximeLeMagicien/uPip"
Issues = "https://github.com/MaximeLeMagicien/uPip/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

