[project]
name = "universalPip"
version = "0.1.1"
description = "Creates an Universal2 distribution for given package on PyPI and installs it."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Maxime CORDELLA", email = "maxime.cordella.1@ulaval.ca" }
]
keywords = [
  "Universal2",
  "macOSX",
  "pyinstaller",
  "arm64",
  "x86_64"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "requests",
  "regex",
  "delocate",
  "asyncio"
]

[project.scripts]
uPip = "uPip.cli:processInput"

[project.urls]
Homepage = "https://github.com/MaximeLeMagicien/uPip"
Issues = "https://github.com/MaximeLeMagicien/uPip/issues"
Changelog = "https://github.com/MaximeLeMagicien/uPip/blob/main/Changelog.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

